# alcounting_bot

./: .gitignore  Dockerfile  README.md  __init__.f90  __main__.f90  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml  python-poetry-code-quality.yml
bot/: __main__.py  main.f90
bot/database/: __init__.f90  __init__.py  database.f90  database.py  order.f90  order.py  product.f90  product.py  user.f90  user.py
bot/handlers/: __init__.f90  __init__.py  callback_handler.f90  callback_handler.py  error_handler.f90  error_handler.py  help_handler.f90  help_handler.py  menu_handler.f90  menu_handler.py  start_handler.f90  start_handler.py
bot/roles/: __init__.f90  __init__.py  admin.f90  admin.py  barman.f90  barman.py  customer.f90  customer.py
bot/settings/: __init__.f90  __init__.py  load_texts.f90  load_texts.py  set_commands.f90  set_commands.py
res/locales/: ru.toml
src/: main.py
src/modules/: admin.py  barman.py  customer.py  data.py  database.py  general.py  handlers.py  order.py  product.py  user.py
startup_scripts/: linux.sh  macos.sh  readme.txt  windows.bat
tests/: conftest.py
tests/test_database/: test_database.py  test_order.py  test_product.py  test_user.py
tests/test_handlers/: test_callback_handler.py  test_help_handler.py  test_menu_handler.py  test_start_handler.py
tests/test_roles/: test_barman.py  test_customer.py
